corrected the layout of container and change the parent of the image shapes3d to ensure correct zindex placement

--- a/createAccount.css
+++ b/createAccount.css
@@ -25,7 +25,7 @@
     height: 100vh;
 }
 
-/* *FORM MAIN CONTAINER */
+/* *CREATE ACCOUNT CONTAINER */
 .form-create-account {
     display: flex;
     align-items: center;
@@ -36,7 +36,7 @@
     z-index: 2;
     background-color: white;
     margin-left: 450px;
-    border-radius: 40px;
+    border-radius: 40px 0 0 40px;
 }
 
 /* *LEFT HEADER TEXT */
